--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="empresa.png" class="d-block w-100" alt="...">
+            <img src="empresa.png" class="d-blockk w-100" height="250px" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="empresa2.png" class="d-block w-100" alt="...">
+            <img src="empresa2.png" class="d-block w-100" height="250px" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="empresa_posto.png" class="d-block w-100" alt="...">
+            <img src="empresa_posto.png" class="d-blockck w-100" height="250px" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -72,24 +72,24 @@
       <div class="container-fluid mt-1">
         <div class="row">
             <div class="offset-lg-1 col-lg-3 border border-3 border border-black text-center cor2">
-                <img width="50%" src="CARRO.png" alt="">
+                <a href=""><img width="50%" src="CARRO.png" alt=""></a>
             </div>
             <div class="col-lg-4 border border-3 border border-black text-center cor2">
-                <img width="50%" src="MOTOS.png" alt="">
+                <a href=""><img width="50%" src="MOTOS.png" alt=""></a>
             </div>
             <div class="col-lg-3 border border-3 border border-black text-center cor2">
-                <img width="50%" src="CAMINHÕES.png" alt="">
+                <a href=""><img width="50%" src="CAMINHÕES.png" alt=""></a>
             </div>
         </div>
         <div class="row">
             <div class="offset-lg-1 col-lg-3 border border-3 border border-black text-center cor2">
-                <img width="50%" src="SUPORTE.png" alt="">
+                <a href=""><img width="50%" src="SUPORTE.png" alt=""></a>
             </div>
             <div class="col-lg-4 border border-3 border border-black text-center cor2">
-                <img width="50%" src="MECANICA.png" alt="">
+                <a href=""><img width="50%" src="MECANICA.png" alt=""></a>
             </div>
             <div class="col-lg-3 border border-3 border border-black text-center cor2">
-                <img width="50%" src="POSTO.png" alt="">
+                <a href=""><img width="50%" src="POSTO.png" alt=""></a>
             </div>
         </div>
 
@@ -99,34 +99,34 @@
                 <h1>Novidades:</h1>
                 <h3>Expansão de Filiais:</h3>
                 <p>A AUTO TUDO inaugurou recentemente novas filiais em várias cidades, aumentando sua presença no mercado e tornando seus produtos e serviços mais acessíveis para os clientes.</p>
-                <img width="40%" src="filiais.png" alt="">
+                <img width="50%" src="filiais.png" alt="">
                 <h3 class="border-top border-3 border-black">Lançamento de Novos Produtos:</h3>
                 <p>A empresa lançou uma linha de acessórios automotivos exclusivos, incluindo câmeras de segurança para veículos, sistemas de som avançados e kits de manutenção personalizados.</p>
-                <img width="40%" src="Lançamento.jpg" alt="">
+                <img width="50%" src="Lançamento.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Aplicativo de Mobilidade:</h3> 
                 <p>A AUTO TUDO desenvolveu um aplicativo inovador que permite aos clientes agendar serviços de manutenção e reparo de seus veículos com apenas alguns cliques, facilitando a vida de quem busca praticidade e rapidez.</p>
-                <img width="40%" src="mobilidade.jpg" alt="">
+                <img width="50%" src="mobilidade.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Parceria com Marcas de Renome:</h3>
                 <p>A empresa firmou novas parcerias com grandes fabricantes de peças automotivas, garantindo a oferta de produtos de alta qualidade a preços competitivos.</p>
-                <img width="40%" src="parceria.jpg" alt="">    
+                <img width="50%" src="parceria.jpg" alt="">    
                 <h3 class="border-top border-3 border-black">Sustentabilidade:</h3>
                 <p>A AUTO TUDO iniciou um programa de reciclagem de peças automotivas e investiu em tecnologias ecoeficientes para minimizar o impacto ambiental de suas operações.</p>
-                <img width="40%" src="sustentabilidade.webp" alt="">
+                <img width="50%" src="sustentabilidade.webp" alt="">
                 <h3 class="border-top border-3 border-black">Treinamentos e Cursos:</h3>
                 <p>A AUTO TUDO lançou uma plataforma de cursos online para profissionais do setor automotivo, visando capacitar mecânicos e técnicos com as últimas inovações e boas práticas do mercado.</p>
-                <img width="40%" src="treinamentos.jpg" alt="">
+                <img width="50%" src="treinamentos.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Atendimento Personalizado:</h3>
                 <p>A empresa implementou um novo sistema de atendimento ao cliente, com chatbots e suporte 24h, garantindo mais agilidade e eficiência na resolução de dúvidas e solicitações.</p>
-                <img width="40%" src="atendimento.jpg" alt="">
+                <img width="50%" src="atendimento.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Promoções Exclusivas:</h3>
                 <p>A AUTO TUDO anunciou descontos especiais e promoções para clientes fiéis, oferecendo desde descontos em produtos até serviços gratuitos em datas comemorativas.</p>
-                <img width="40%" src="promocoes.jpg" alt="">
+                <img width="50%" src="promocoes.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Pesquisa e Desenvolvimento:</h3>
                 <p>A empresa investiu em um setor de P&D para desenvolver novas soluções tecnológicas que aprimorem a performance e a segurança dos veículos, com foco em inovações para o futuro automotivo.</p>
-                <img width="40%" src="pesquisa.jpg" alt="">
+                <img width="50%" src="pesquisa.jpg" alt="">
                 <h3 class="border-top border-3 border-black">Eventos e Feiras:</h3>
                 <p>A AUTO TUDO participou de importantes feiras e eventos do setor automotivo, apresentando suas últimas inovações e estreitando relações com clientes e fornecedores.</p>
-                <img width="40%" src="eventos.jpg" alt="">
+                <img width="50%" src="eventos.jpg" alt="">
             </div>
         </div>
 
